<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:background="@drawable/sign_in"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/ivLogo"
            android:background="@drawable/logotext"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo" />

        <TextView
            android:id="@+id/tvSilahkan"
            android:textAlignment="center"
            android:layout_marginBottom="50dp"
            android:layout_below="@id/ivLogo"
            android:text="@string/silahkan_login_untuk_memakai_aplikasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etUsername"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/tvSilahkan"
            android:drawableStart="@drawable/ic_username"
            android:hint="@string/username"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="text" />

        <EditText
            android:id="@+id/etPassword"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/etUsername"
            android:drawableStart="@drawable/ic_password"
            android:layout_margin="@dimen/fab_margin"
            android:hint="@string/password"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:autofillHints="" />

        <ImageButton
            android:id="@+id/ibtnLogin"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/etPassword"
            android:background="@drawable/btn_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/button" />

        <TextView
            android:id="@+id/tvCreateAccount"
            android:text="@string/create_a_new_account"
            android:layout_below="@id/ibtnLogin"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_height="wrap_content"/>
    </RelativeLayout>


</LinearLayout>